refactor(listings): unify discovery endpoints, filter by everything
- Remove getListingsByCategory (service) and POST /listings/category
  (controller) entirely — every one of its use cases is just
  searchListings with category set and everything else blank, so
  keeping both was redundant
- getMyListings/GET /listings/me: add category, city, minPrice,
  maxPrice, and free-text query filters alongside the existing status
  filter — previously status was the only supported filter
- searchListings/GET /listings/search: rewritten on MongoTemplate
  instead of loading every category via findAll() and filtering in
  memory. Fixes a real inconsistency along the way — city filtering
  previously only worked at the query level for SHORT_TERM_RENTAL,
  every other category ignored it until an in-memory pass afterward.
  Visibility (not deleted/archived/rejected, actively promoted) is now
  enforced in the query itself instead of a full in-memory filter pass
- Add shared buildListingQuery/findAcrossCategories/findByCategory
  helpers in ListingService, used by both searchListings and
  getMyListings
- Remove isListingVisible — dead code once its two callers
  (getListingsByCategory, searchListings) were rewritten

Note: city and free-text query matching still use a 'contains' regex,
not index-backed — fine at current scale, would want a Mongo text
index or dedicated search service before real production traffic.